# froot

./: .dockerignore  .env.example  .gitignore  ANATOMY.md  CLAUDE.md  DOC_COHERENCE_SMOKE.md  DOC_REFS_SMOKE.md  Dockerfile  Makefile  README.md  SPEC.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml  determinism.yml
docs/: README.md  froot-explained-full.html
scripts/: check_determinism.py  check_determinism_transitive.py  e2e_run.py
src/froot/: __init__.py  a11y_review_starter.py  judge_eval.py  result.py  review_starter.py  scan_starter.py  starter.py  trigger.py  watchdog.py  worker.py
src/froot/adapters/: __init__.py  _proc.py  a11y_judge.py  agentic_executor.py  changelog_http.py  codemod.py  determinism_judge.py  doc_coherence_agent.py  doc_refs_judge.py  doc_source.py  e2b_sandbox.py  github.py  model.py  model_judge.py  npm.py  ntfy.py  osv.py  registry.py  source_tree.py  telemetry.py  uv.py  web_source.py
src/froot/config/: __init__.py  settings.py
src/froot/dashboard/: __init__.py  __main__.py  clickhouse_source.py  github_source.py  model.py  read_model.py  render.py  server.py  temporal_source.py
src/froot/domain/: __init__.py  a11y.py  advisory.py  base.py  candidate.py  changelog.py  ci.py  dead_source.py  determinism.py  doc_coherence.py  doc_refs.py  ecosystem.py  effects.py  events.py  loop.py  outcome.py  pull_request.py  removal.py  repo.py  sandbox.py  state.py  version.py  work.py
src/froot/loops/: __init__.py  a11y_review.py  dead_code.py  dependency_patch.py  determinism_review.py  doc_coherence.py  doc_refs.py  registry.py  security_patch.py
src/froot/policy/: __init__.py  a11y_comment.py  a11y_scan.py  autonomy.py  canary.py  candidates.py  compose.py  dead_source.py  determinism.py  doc_coherence_comment.py  doc_refs_comment.py  doc_refs_scan.py  environment.py  gate_probe.py  judge_eval.py  naming.py  reconcile.py  review_comment.py  state_machine.py
src/froot/ports/: __init__.py  protocols.py
src/froot/workflow/: __init__.py  a11y_review_workflow.py  activities.py  bump_workflow.py  constants.py  doc_coherence_review_workflow.py  doc_refs_review_workflow.py  pr_a11y_review_workflow.py  pr_doc_coherence_review_workflow.py  pr_doc_refs_review_workflow.py  pr_review_workflow.py  review_workflow.py  runtime.py  scan_workflow.py  temporal_client.py  types.py
tests/: conftest.py  support.py  test_a11y_activities.py  test_a11y_comment.py  test_a11y_github.py  test_a11y_judge.py  test_a11y_naming.py  test_a11y_review_workflow.py  test_a11y_scan.py  test_activities.py  test_agentic_executor.py  test_autonomy.py  test_bump_workflow.py  test_canary.py  test_candidate.py  test_candidates_policy.py  test_changelog_adapter.py  test_codemod.py  test_compose.py  test_dashboard_github_source.py  test_dashboard_read_model.py  test_dashboard_render.py  test_dead_code.py  test_dead_source.py  test_determinism_judge.py  test_determinism_policy.py  test_doc_coherence.py  test_doc_coherence_review_workflow.py  test_doc_refs_comment.py  test_doc_refs_judge.py  test_doc_refs_review_workflow.py  test_doc_refs_scan.py  test_doc_source.py  test_domain_models.py  test_e2e_workflow.py  test_environment.py  test_gate_probe.py  test_github_adapter.py  test_heartbeat.py  test_judge_eval.py  (+31 more)
